# ScoringHaskell

./: CHANGELOG.md  README.md  ScoringHaskell.cabal  run  scoring.hs
app/: Scoring.hs
test/: test.hs
