cabal-version:      2.4
name:               ScoringHaskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Hanley
maintainer:         dhanley@groupon.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable ScoringHaskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, directory ^>=1.3.6.0, strings ^>=1.1
    hs-source-dirs:   app
    default-language: Haskell2010


Test-Suite test
    type: exitcode-stdio-1.0
    ghc-options: -Wall
    hs-source-dirs: test, app
    main-is:    test.hs
    build-depends: base, HUnit, directory ^>= 1.3.6.0, strings ^>=1.1
    default-language: Haskell2010
    other-modules: Scoring
